--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
